@@ -1,5 +1,14 @@
 2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/check.py:
+	  When processing files, only return warnings about newly loaded
+	  modules because of the files processed.
+	* test/test_internal.py:
+	  Fix up the tests now that warnings don't bleed over from one test
+	  to the next.
+
+2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* pychecker/pcmodules.py:
 	  Prepare for keying functions on alias instead of name.
 
